devops/kubernetes/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorim-api-deployment
  labels:
    app: factorim-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorim-api
  template:
    metadata:
      labels:
        app: factorim-api
    spec:
      containers:
        - name: factorim-api
          image: ghcr.io/factorim/factorim-nestjs-nextjs-boilerplate/factorim-api:1.0.0
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
