devops/kubernetes/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorim-api-service
spec:
  selector:
    app: factorim-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30040
  type: NodePort
