devops/kubernetes/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorim-api-ingress
spec:
  rules:
    - host: api.factorim.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: factorim-api-service
                port:
                  number: 3000
